test/testdata/functions/anonymous/redefined_parameter_error.lox
var f = fun(x) {
  var x = 1; // error: x has already been declared
  _ = x;
};
